# Aura

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.trae/rules/: project_rules.md
config/: __init__.py  development.yaml  logging.yaml  mcp_servers.json  production.yaml  security.yaml  settings.py
docs/: api-reference.md  architecture-decisions.md  deployment-guide.md  development-guide.md  playwright_mcp_extension_setup.md  project-documentation-template.md  project-documentation-template_short.md  system-overview.md  technical-specifications.md  testing-guide.md
examples/: error_handling_demo.py  multi_mcp_integration_example.py
logs/: README.md
scripts/: deploy.py  dev.py  start.py
skills/: __init__.py
src/: __init__.py
src/api/: __init__.py  app.py  routes.py
src/cli/: interface.py
src/config/: mcp_config.py  mcp_types.py
src/core/: __init__.py  action_graph.py  mcp_error_handler.py  mcp_manager.py  orchestrator.py  policy_engine.py  risk_engine.py
src/data/: __init__.py
src/modules/: __init__.py  command_parser.py  site_explorer.py  skill_library.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_action_graph.py  test_command_parser.py  test_mcp_error_handling.py  test_multi_mcp_integration.py  test_orchestrator.py  test_site_explorer.py  test_skill_library.py
tools/: mcp_config_manager.py  mcp_monitor.py
